<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactActivities.ProfDavidActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profpic"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/profpicforcontact"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nameDavid"
        android:id="@+id/txtName"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/roleDavid"
        android:id="@+id/txtRole"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/descriptionDavid"
        android:id="@+id/txtDescription"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nationalityRD"
        android:id="@+id/txtNationality"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOne"
            android:src="@drawable/icongplus"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTwo"
            android:src="@drawable/linkinicon"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnThree"
            android:src="@drawable/iconinstagram"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>

