<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerFileSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/txtFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sFileSize"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_progress"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="257dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="158dp" />


    <TextView
        android:id="@+id/text_view_progress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sProgress"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/floatingtext3"
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="48dp"
        tools:layout_conversion_absoluteX="296dp"
        tools:layout_conversion_absoluteY="142dp" />

    <TextView
        android:id="@+id/text_view_percent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sBarPercentage"
        android:textAlignment="center"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/floatingtext3"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="23dp"
        tools:layout_conversion_absoluteX="309dp"
        tools:layout_conversion_absoluteY="160dp" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:text="@string/sBtnCalculate"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:layout_conversion_absoluteHeight="60dp"
        tools:layout_conversion_absoluteWidth="120dp"
        tools:layout_conversion_absoluteX="132dp"
        tools:layout_conversion_absoluteY="208dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/floatingtext3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerEstimatedSpeed"
        app:layout_constraintTop_toBottomOf="@+id/floatingtext"
        tools:layout_conversion_absoluteHeight="54dp"
        tools:layout_conversion_absoluteWidth="257dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="72dp">

        <EditText
            android:id="@+id/txtSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sEstSpeed"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerFileSize"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/floatingtext"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/floatingtext"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/spinnerEstimatedSpeed"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/floatingtext3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/floatingtext3" />


</android.support.constraint.ConstraintLayout>